adding modal and desktop items

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Giga Sur</title>
   </head>
   <body>
+    <div id="modal-content"></div>
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
