--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="./public/images/faux-apple-icon.png" />
+    <link
+      rel="icon"
+      type="image"
+      href="./public/static/images/faux-apple-icon.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Giga Sur</title>
   </head>
