--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div id="modal-content"></div>
+    <div id="web-modal-content"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
